# crazyflie-GUI-python

./: README.md  user_guide.md
matlab/: pack_pwm_u16_bytes.m
src/: pyproject.toml
src/cfmarslab/: __main__.py  config.py  control.py  link.py  models.py  realtime.py  ui.py  utils.py  vicon.py
tests/: test_config.py  test_control_pwm.py  test_pwm_restart.py  test_setpointloop.py  test_vicon.py
